@@ -10,3 +10,6 @@ endif
 
 source ${MGICONFIG}/master.config.csh
 
+setenv COLDELIM         "|"
+setenv LINEDELIM        "\n"
+
